--- a/children_games/scream/makefile.conf
+++ b/children_games/scream/makefile.conf
@@ -1,6 +1,7 @@
 GCC = avr-gcc
 AS = avr-as
 LD = avr-ld
+#LD = avr-gcc
 OBJCOPY = avr-objcopy
 GDB = avr-gdb
 SIM = simavr
@@ -9,12 +10,13 @@ SIM = simavr
 MMCU = atmega88
 FMMCU = m88
 F_CPU = 12000000
+#F_CPU = 8000000
 
 #MMCU = atmega48pa
 #FMMCU = m48p
 
 # Compile flags
-CFLAGS = -O1 -std=c11
+CFLAGS = -O1 -std=c11 #-ffunction-sections -fdata-sections
 SFLAGS =
 
 CINCLUDES = -I./
@@ -25,4 +27,6 @@ TARGET_HEX = avr.hex
 GDB_TARGET_BINARY = avr_debug.bin
 GDB_TARGET_HEX = avr_debug.hex
 
-LINKFLAGS = -L/usr/avr/lib/avr4 -lc -lm -L/usr/lib/gcc/avr/5.2.0/avr4 -lgcc
+LINKFLAGS = -L/usr/avr/lib/avr4 -u vfprintf -lprintf_flt -lc -lm -L/usr/lib/gcc/avr/5.2.0/avr4 -lgcc #-gc-sections
+#LINKFLAGS =  -Wl,-u,vfprintf,-nostartfiles -lprintf_flt -lc -lm#-gc-sections
+
