--- a/children_games/scream/makefile.conf
+++ b/children_games/scream/makefile.conf
@@ -27,6 +27,6 @@ TARGET_HEX = avr.hex
 GDB_TARGET_BINARY = avr_debug.bin
 GDB_TARGET_HEX = avr_debug.hex
 
-LINKFLAGS = -L/usr/avr/lib/avr4 -u vfprintf -lprintf_flt -lc -lm -L/usr/lib/gcc/avr/5.2.0/avr4 -lgcc #-gc-sections
+LINKFLAGS = -L/usr/avr/lib/avr4 -u vfprintf -lprintf_flt -lc -lm -L/usr/lib/gcc/avr/5.2.0/avr4 -lgcc
 #LINKFLAGS =  -Wl,-u,vfprintf,-nostartfiles -lprintf_flt -lc -lm#-gc-sections
 
